continuer la transfomation en application standalone

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -5,8 +5,8 @@
     <title>BO Moteur de mocks</title>
 
     <link rel="stylesheet" href="/webjars/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/app.css">
-    <link rel="stylesheet" href="static/css/confirm-modal.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="stylesheet" href="/css/confirm-modal.css">
 
     <script type="text/javascript" src="/webjars/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/3.1.1/js/bootstrap.min.js"></script>
@@ -15,15 +15,15 @@
     <script type="text/javascript" src="/webjars/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.min.js"></script>
     
     <script type="text/javascript" src="/webjars/angular-ui-ace/0.1.0/ui-ace.min.js"></script>
-    <script type="text/javascript" src="/webjars/ace/07.31.2013/src-min/ace.js"></script>
+    <script type="text/javascript" src="/webjars/ace/1.1.3/src-min/ace.js"></script>
     <script type="text/javascript" src="/webjars/underscorejs/1.6.0/underscore-min.js"></script>
 
 
-    <script src="static/app.js"></script>
-    <script src="static/directive/criteria-values/criteria-values.js"></script>
-    <script src="static/directive/label-display/label-display.js"></script>
-    <script src="static/directive/confirm-modal/confirm-modal.js"></script>
-    <script src="static/modules/mock/mock.js"></script>
+    <script src="/app.js"></script>
+    <script src="/directive/criteria-values/criteria-values.js"></script>
+    <script src="/directive/label-display/label-display.js"></script>
+    <script src="/directive/confirm-modal/confirm-modal.js"></script>
+    <script src="/modules/mock/mock.js"></script>
 </head>
 <body>
 
