--- a/src/main/webapp/static/modules/mock/list.html
+++ b/src/main/webapp/static/modules/mock/list.html
@@ -3,12 +3,12 @@
     <table class="table table-striped">
         <tr>
             <th style="width: 30px;"><a ui-sref="mock.upsert({mockId: tempId})"><span class="glyphicon glyphicon-plus"></span></a></th>
-            <th style="width: 225px;">Namespace<br><input ng-model="search.namespace"></th>
-			<th style="width: 225px;">Nom<br><input ng-model="search.name"></th>
-            <th>Description<br><input ng-model="search.description"></th>
-			<th>Modif</th>
+            <th style="width: 225px;"><a href="" ng-click="predicate='namespace';reverse=!reverse">Namespace</a><br><input ng-model="search.namespace"></th>
+			<th style="width: 225px;"><a href="" ng-click="predicate='name';reverse=!reverse">Nom</a><br><input ng-model="search.name"></th>
+            <th><a href="" ng-click="predicate='description';reverse=!reverse">Description</a><br><input ng-model="search.description"></th>
+			<th><a href="" ng-click="predicate='update';reverse=!reverse">Modif</a></th>
         </tr>
-        <tr ng-repeat="mock in mocks | filter:search:strict | orderBy:'name'">
+        <tr ng-repeat="mock in mocks | filter:search:strict | orderBy:predicate:reverse">
             <td>
                 <a ui-sref="mock.upsert({mockId: mock.id})"><span class="glyphicon glyphicon-pencil"></span></a><br>
                 <a ng-click="delete(mock.id)" style="cursor: pointer;"><span class="glyphicon glyphicon-trash" style="color: red;"></span></a>
