--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -45,6 +45,12 @@
 					<input type="text" class="form-control" name="id" id="mockRequestBodyPattern" ng-model="mock.request.bodyPattern" />
 				</div>
 			</div>
+			<div class="form-group">
+				<label class="col-lg-2 control-label" for="mockRequestUrlPattern" style="font-weight: bold">Pattern url</label>
+				<div class="col-lg-10">
+					<input type="text" class="form-control" name="id" id="mockRequestUrlPattern" ng-model="mock.request.urlPattern" />
+				</div>
+			</div>
 		</div>
 
 		<div class="row col-lg-12" style="background-color: #333; padding: 12px; margin-bottom: 24px;">
