--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -19,6 +19,12 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label class="col-lg-2 control-label" for="mockOwner" style="font-weight: bold">Créer par</label>
+				<div class="col-lg-10">
+					<input type="text" class="form-control" name="id" id="mockOwner" ng-model="mock.owner" />
+				</div>
+			</div>
+			<div class="form-group">
 				<label class="col-lg-2 control-label" for="mockName" style="font-weight: bold">Nom</label>
 				<div class="col-lg-10">
 					<input type="text" class="form-control" name="id" id="mockName" ng-model="mock.name" />
