auto-complete sur le champ Namespace

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -5,10 +5,13 @@
     <title>BO Moteur de mocks</title>
 
     <link rel="stylesheet" href="/webjars/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/webjars/jquery-ui/1.11.0/jquery-ui.min.css">
     <link rel="stylesheet" href="/css/app.css">
+    
     <link rel="stylesheet" href="/css/confirm-modal.css">
-
+    
     <script type="text/javascript" src="/webjars/jquery/1.11.0/jquery.min.js"></script>
+    <script type="text/javascript" src="/webjars/jquery-ui/1.11.0/jquery-ui.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/webjars/angularjs/1.2.12/angular.min.js"></script>
     <script type="text/javascript" src="/webjars/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
@@ -24,6 +27,7 @@
     <script src="/directive/label-display/label-display.js"></script>
     <script src="/directive/confirm-modal/confirm-modal.js"></script>
     <script src="/modules/mock/mock.js"></script>
+    <script src="/directive/auto-complete/autocomplete.js"></script>
 </head>
 <body>
 
