--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -15,7 +15,7 @@
 			<div class="form-group">
 				<label class="col-lg-2 control-label" for="mockNamespace" style="font-weight: bold">Namespace</label>
 				<div class="col-lg-10">
-		               <input auto-complete ui-items="namespaces" class="form-control" id="mockNamespace"  ng-model="mock.namespace">
+		               <input class="form-control" id="mockNamespace" type="text" ng-model="mock.namespace" typeahead="namespace for namespace in namespaces | filter:$viewValue">
 				</div>
 			</div>
 			<div class="form-group">
