autocomplete sur l'input Créer par

--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -21,7 +21,7 @@
 			<div class="form-group">
 				<label class="col-lg-2 control-label" for="mockOwner" style="font-weight: bold">Créer par</label>
 				<div class="col-lg-10">
-					<input type="text" class="form-control" name="id" id="mockOwner" ng-model="mock.owner" />
+					<input type="text" class="form-control" name="id" id="mockOwner" ng-model="mock.owner" typeahead="owner for owner in owners | filter:$viewValue"/>
 				</div>
 			</div>
 			<div class="form-group">
