--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -61,7 +61,7 @@
 		
 		<div class="row col-lg-12">
 			<div class="form-group">
-				<label class="col-lg-2" style="font-weight: bold">Pattern url</label>
+				<label class="col-lg-2" style="font-weight: bold">Content Type</label>
 				<div class="col-lg-10">
 					<select ng-model="contentType">
 						<option value="text/html">HTML</option>
