fix encodage utf-8 des .js + sauter les chaines vide pour le filtre nl2br

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -22,11 +22,11 @@
     <script type="text/javascript" src="/webjars/underscorejs/1.6.0/underscore-min.js"></script>
 
 
-    <script src="/app.js"></script>
-    <script src="/directive/criteria-values/criteria-values.js"></script>
-    <script src="/directive/label-display/label-display.js"></script>
-    <script src="/directive/confirm-modal/confirm-modal.js"></script>
-    <script src="/modules/mock/mock.js"></script>
+    <script src="/app.js"  charset="utf-8"></script>
+    <script src="/directive/criteria-values/criteria-values.js"  charset="utf-8"></script>
+    <script src="/directive/label-display/label-display.js"  charset="utf-8"></script>
+    <script src="/directive/confirm-modal/confirm-modal.js"  charset="utf-8"></script>
+    <script src="/modules/mock/mock.js"  charset="utf-8"></script>
 </head>
 <body>
 
