--- a/src/main/webapp/static/modules/mock/list.html
+++ b/src/main/webapp/static/modules/mock/list.html
@@ -13,8 +13,9 @@
         </tr>
         <tr ng-repeat="mock in mocks |  filter:search | orderBy:predicate:reverse">
             <td>
-                <a ui-sref="mock.upsert({mockId: mock.id})"><span class="glyphicon glyphicon-pencil"></span></a><br>
-                <a ng-click="delete(mock.id)" style="cursor: pointer;"><span class="glyphicon glyphicon-trash" style="color: red;"></span></a>
+                <a ui-sref="mock.upsert({mockId: mock.id})" title="Mettre à jour"><span class="glyphicon glyphicon-pencil"></span></a><br>
+                <a ng-click="duplicate(mock.id)"  style="cursor: pointer;" title="Dupliquer"><span class="glyphicon glyphicon-repeat"></span></a><br>
+                <a ng-click="delete(mock.id)" style="cursor: pointer;" title="Supprimer"><span class="glyphicon glyphicon-trash" style="color: red;"></span></a>
             </td>
             <td style="font-size: 10px; font-weight: bold;">{{mock.namespace}}</td>
 			<td style="font-size: 10px; font-weight: bold;">{{mock.name}}</td>
