--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -14,10 +14,7 @@
     <script type="text/javascript" src="/webjars/angularjs/1.2.12/angular.min.js"></script>
     <script type="text/javascript" src="/webjars/angular-ui-router/0.2.10/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="/webjars/angular-ui-bootstrap/0.11.0/ui-bootstrap-tpls.min.js"></script>
-    <!-- Suite au bug de l'editeur vide si on fait un swich suivant le content Type qui a comme origine le bug décrit dans ce lien https://github.com/angular-ui/ui-ace/issues/24 et qui a été corrigé sur la version 0.1.1 de ui-ace,
-     on était obligé d'inclure à la main le js  de cette version car elle n'est toujours pas disponible sur webjars  -->
-    <!-- <script type="text/javascript" src="/webjars/angular-ui-ace/0.1.0/ui-ace.min.js"></script> -->
-    <script src="/ui-ace-src0.1.1/src/ui-ace.js"></script>
+    <script type="text/javascript" src="/webjars/angular-ui-ace/0.1.1/ui-ace.min.js"></script>
     <script type="text/javascript" src="/webjars/ace/1.1.3/src-min/ace.js"></script>
     <script type="text/javascript" src="/webjars/underscorejs/1.6.0/underscore-min.js"></script>
 
