--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -42,6 +42,13 @@
 					<textarea class="form-control" id="longDescription" ng-model="mock.longDescription"></textarea>
 				</div>
 			</div>
+			<div class="form-group">
+				<label for="priority" class="col-lg-2 control-label">Priorité</label>
+				<div class="col-lg-10">
+					<input type="number"  id="priority" class="form-control" ng-model="mock.priority">
+				</div>
+			</div>
+			
 		</div>
 
 		<div class="row col-lg-12" style="background-color: #D6D4FF; padding: 12px; margin-bottom: 24px;">
