Ajouter un contrôle sur la priorité min value =1

--- a/src/main/webapp/static/modules/mock/upsert.html
+++ b/src/main/webapp/static/modules/mock/upsert.html
@@ -45,7 +45,7 @@
 			<div class="form-group">
 				<label for="priority" class="col-lg-2 control-label">Priorité</label>
 				<div class="col-lg-10">
-					<input type="number"  id="priority" class="form-control" ng-model="mock.priority">
+					<input type="number" min="1" id="priority" class="form-control" ng-model="mock.priority">
 				</div>
 			</div>
 			
